# arctic-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions_8mb.csv  sdkconfig.defaults
.github/: copilot-instructions.md
.github/workflows/: build.yml  create-release.yml
captures/: example.jsonl  sniff_cap.jsonl  sniff_cap3.jsonl
docs/: ARCTIC-MODBUS-PROTOCOL.md  openapi.yaml
main/: CMakeLists.txt  Kconfig.projbuild  api_server.cpp  api_server.h  display.cpp  display.h  dns_server.cpp  idf_component.yml  main.cpp  modbus_slave.cpp  modbus_slave.h  playback.cpp  playback.h  recorder.cpp  recorder.h  register_map.cpp  register_map.h  simulation.cpp  simulation.h  status_led.cpp  status_led.h  wifi_manager.cpp  wifi_manager.h
main/web/: gzip_html.py  index.html  portal.html
tests/: test_playback.py
